--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#7e84a3</color>
-    <color name="colorPrimaryDark">#2e2f38</color>
+    <color name="colorPrimaryDark">#66687e</color>
     <color name="colorAccent">#000000</color>
 </resources>
