--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -52,7 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?attr/actionModeSplitBackground"
-                android:text="Submit"
+                android:text="submit"
                 android:textColor="#FFF" />
 
         </LinearLayout>
